bg dark mode bug fixed'

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 body {
   background-image: url('assets/bg-pattern.webp');
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-image: none;
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+}
